# roastcoffea

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  DESIGN.md  METRICS_REFERENCE.md  README.md  pyproject.toml
docs/: architecture.md  concepts.md  conf.py  contributing.md  index.md  introduction.md  metrics_api.md  metrics_reference.md  quickstart.md  tutorials.md  visualization_guide.md
docs/_build/html/: advanced.html  architecture.html  concepts.html  contributing.html  genindex.html  index.html  introduction.html  metrics_reference.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorials.html
docs/_build/html/.doctrees/: advanced.doctree  architecture.doctree  concepts.doctree  contributing.doctree  index.doctree  introduction.doctree  metrics_reference.doctree  quickstart.doctree  tutorials.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/roastcoffea/: collector.html  decorator.html  instrumentation.html  utils.html
docs/_build/html/_sources/: architecture.md.txt  introduction.md.txt
docs/_build/html/api/: index.html
docs/_build/html/api/_autosummary/: roastcoffea.aggregation.backends.base.html  roastcoffea.aggregation.backends.dask.html  roastcoffea.aggregation.chunk.html  roastcoffea.aggregation.core.html  roastcoffea.aggregation.efficiency.html  roastcoffea.aggregation.fine_metrics.html  roastcoffea.aggregation.workflow.html  roastcoffea.backends.base.html  roastcoffea.backends.dask.html  roastcoffea.collector.html  roastcoffea.decorator.html  roastcoffea.export.measurements.html  roastcoffea.export.reporter.html  roastcoffea.instrumentation.html  roastcoffea.utils.html  roastcoffea.visualization.plots.cpu.html  roastcoffea.visualization.plots.memory.html  roastcoffea.visualization.plots.scaling.html  roastcoffea.visualization.plots.throughput.html  roastcoffea.visualization.plots.workers.html
docs/api/: index.md
docs/api/_autosummary/: roastcoffea.aggregation.backends.dask.rst  roastcoffea.aggregation.chunk.rst  roastcoffea.aggregation.core.rst  roastcoffea.aggregation.fine_metrics.rst  roastcoffea.backends.base.rst  roastcoffea.decorator.rst  roastcoffea.export.measurements.rst  roastcoffea.export.reporter.rst  roastcoffea.instrumentation.rst  roastcoffea.visualization.plots.cpu.rst  roastcoffea.visualization.plots.memory.rst  roastcoffea.visualization.plots.scaling.rst  roastcoffea.visualization.plots.throughput.rst  roastcoffea.visualization.plots.workers.rst
examples/: basic_usage.ipynb  bytesread_branch_test.py  client-profile.html  dask-profile.html  dask_profiles.json  fine_metrics_demo.ipynb  profile.html  profiler.ipynb  taskstate_branch_comparison.ipynb  taskstate_exploration.ipynb  taskstate_exploration_realtime.ipynb
src/roastcoffea/: __init__.py  collector.py  decorator.py  instrumentation.py  utils.py
src/roastcoffea/aggregation/: branch_coverage.py  chunk.py  chunks.py  core.py  efficiency.py  efficiency_metrics.py  fine_metrics.py  worker_metrics.py  workflow.py  workflow_metrics.py
src/roastcoffea/aggregation/backends/: __init__.py  dask.py
src/roastcoffea/backends/: base.py  dask.py
src/roastcoffea/export/: __init__.py  measurements.py  reporter.py
src/roastcoffea/visualization/: __init__.py  utils.py
src/roastcoffea/visualization/plots/: __init__.py  chunks.py  cpu.py  io.py  memory.py  per_task.py  scaling.py  throughput.py  workers.py
tests/: conftest.py  test_collector.py  test_e2e.py  test_stubs.py  test_utils.py
tests/aggregation/: test_branch_coverage.py  test_chunk.py  test_chunks.py  test_core.py  test_efficiency.py  test_fine_metrics.py  test_workflow.py
tests/aggregation/backends/: test_dask.py
tests/backends/: test_backends.py
tests/export/: test_measurements.py  test_reporter.py
tests/instrumentation/: test_context.py  test_decorator.py  test_instrumentation.py
tests/integration/: test_byte_tracking.py
tests/visualization/plots/: test_chunks.py  test_cpu.py  test_io.py  test_memory.py  test_per_task.py  test_scaling.py  test_workers.py
(+47 files in other folders)
